--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.5"
