--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
+    "pre-prod-front-only": "cross-env NODE_ENV=pre-prod nodemon src/index.ts",
+    "pre-prod-full": "cross-env NODE_ENV=pre-prod tsc && node dist/index.js",
+    "build": "npm install && npx tsc",
+    "build-and-start": "cross-env NODE_ENV=production tsc && node dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +21,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.10",
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
