--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "pre-prod-front-only": "cross-env NODE_ENV=pre-prod nodemon src/index.ts",
     "pre-prod-full": "cross-env NODE_ENV=pre-prod tsc && node dist/index.js",
     "build": "npm install && npx tsc",
-    "build-and-start": "cross-env NODE_ENV=production tsc && node dist/index.js",
+    "start": "cross-env NODE_ENV=production tsc && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
