ignore StrictHostKeyChecking in workflow

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -34,8 +34,10 @@ jobs:
         run: |
           echo "$SSH_PRIVATE_KEY" > private_key
           chmod 600 private_key
-          scp -i private_key -r backend ec2-user@3.13.197.119:/home/ec2-user/
-          ssh -i private_key ec2-user@3.13.197.119 << 'EOF'
+          # Disable strict host key checking for SSH and SCP
+          echo -e "Host *\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
+          scp -i private_key -o StrictHostKeyChecking=no -r backend ec2-user@3.13.197.119:/home/ec2-user/
+          ssh -i private_key -o StrictHostKeyChecking=no ec2-user@3.13.197.119 << 'EOF'
             cd /home/ec2-user/backend
             npm install
             npm run build
