--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -38,10 +38,13 @@ jobs:
           mkdir -p ~/.ssh
           # Disable strict host key checking for SSH and SCP
           echo -e "Host *\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
-          scp -i private_key -o StrictHostKeyChecking=no -r backend ec2-user@3.13.197.119:/home/ec2-user/
+          # Copy the built project to the EC2 instance
+          scp -i private_key -o StrictHostKeyChecking=no -r backend/dist ec2-user@3.13.197.119:/home/ec2-user/backend/dist
+          scp -i private_key -o StrictHostKeyChecking=no backend/package.json ec2-user@3.13.197.119:/home/ec2-user/backend/package.json
+          scp -i private_key -o StrictHostKeyChecking=no backend/package-lock.json ec2-user@3.13.197.119:/home/ec2-user/backend/package-lock.json
           ssh -i private_key -o StrictHostKeyChecking=no ec2-user@3.13.197.119 << 'EOF'
             cd /home/ec2-user/backend
-            npm install
-            npm run build
+            npm install --production
             pm2 restart all || pm2 start dist/index.js --name backend
           EOF
+          rm private_key
